--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,9 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:layout_marginStart="20dp"
-        android:text="Welcome to LifeAI"
-        android:textSize="25sp"
+        android:text="LifeAI"
+        android:textSize="40sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
          />
@@ -40,9 +41,9 @@
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="18dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/loginasset"
+        android:src="@drawable/icon_lifeai"
         app:layout_constraintTop_toBottomOf="@id/tvSignUp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,10 +55,10 @@
         android:layout_height="wrap_content"
         android:hint="Masukkan Email Anda"
         android:inputType="textEmailAddress"
-        android:padding="16dp"
-        android:backgroundTint="@color/black"
+        android:padding="12dp"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:background="@drawable/edittext_border"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,17 +72,17 @@
         android:layout_height="wrap_content"
         android:hint="Masukkan Password Anda"
         android:inputType="textPassword"
-        android:padding="16dp"
-        android:backgroundTint="@color/black"
+        android:padding="12dp"
         android:textColor="@color/black"
-        app:startIconDrawable="@drawable/padlock"
         android:textSize="16sp"
+        android:background="@drawable/edittext_border"
         app:layout_constraintTop_toBottomOf="@id/etEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp" />
+
 
     <Button
         android:id="@+id/btnlogin"
