--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -1,197 +1,252 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity3"
-    android:fillViewport="true">
+    android:background="#FEF8F8">
 
+    <!-- Layout utama -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
+
+        <!-- Header -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Prediksi Penyakit Mental"
+            android:textColor="#000"
+            android:textSize="24sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:layout_marginBottom="16dp" />
 
         <!-- Welcome Message -->
         <TextView
             android:id="@+id/welcomeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:padding="8dp" />
+            android:textSize="20sp"
+            android:padding="8dp"
+            android:layout_marginBottom="16dp"/>
 
-        <!-- Input Text for User Message -->
-        <EditText
-            android:id="@+id/inputText"
+        <!-- ScrollView wrapping the rest of the content -->
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Masukkan pesan Anda"
-            android:padding="12dp"
-            android:layout_marginBottom="10dp"
-            android:background="@android:drawable/editbox_background" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:fillViewport="true"
+            android:layout_marginBottom="50dp">
 
-        <!-- Parameter Section -->
-        <!-- Intensitas Perasaan -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa intens perasaan negatif yang Anda rasakan?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/intensitasSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <!-- Durasi Perasaan -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa lama perasaan ini berlangsung?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/durasiSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
+                <!-- Input Text for User Message -->
+                <EditText
+                    android:id="@+id/inputText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Masukkan pesan Anda"
+                    android:padding="12dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@android:drawable/editbox_background" />
 
-        <!-- Frekuensi Perasaan Negatif -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda merasakan perasaan negatif?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/frekuensiSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
+                <!-- Parameter Section -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa intens perasaan negatif yang Anda rasakan?"
+                    android:layout_marginTop="16dp" />
 
-        <!-- Pengaruh pada Aktivitas Harian -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa besar perasaan ini mengganggu aktivitas harian Anda?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/keseharianSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
+                <SeekBar
+                    android:id="@+id/intensitasSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
 
-        <!-- Pola Berpikir Negatif -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda memiliki pola berpikir negatif tentang diri sendiri?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/polaNegatifSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
+                <!-- Repeat for other SeekBars -->
+                <!-- Durasi Perasaan -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa lama perasaan ini berlangsung?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/durasiSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
 
-        <!-- Ketakutan Berlebihan -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda merasa takut pada situasi tanpa alasan jelas?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/ketakutanSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
+                <!-- Frekuensi Perasaan Negatif -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda merasakan perasaan negatif?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/frekuensiSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
 
-        <!-- Kesulitan Berkonsentrasi -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda kesulitan berkonsentrasi atau fokus?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/konsentrasiSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
-
-        <!-- Kelelahan Berlebih -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda merasa kelelahan berlebih?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/kelelahanSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
-
-        <!-- Gangguan Tidur -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda mengalami gangguan tidur?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/tidurSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
-
-        <!-- Penurunan Minat pada Aktivitas -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa besar penurunan minat Anda pada aktivitas yang biasanya disukai?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/minatSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
-
-        <!-- Isolasi Sosial -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Seberapa sering Anda menghindari interaksi sosial?"
-            android:layout_marginTop="10dp" />
-        <SeekBar
-            android:id="@+id/isolasiSeekBar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:max="4" />
-
-        <!-- Send Button -->
-        <Button
-            android:id="@+id/sendButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Kirim"
-            android:layout_marginTop="16dp" />
-
-        <!-- TextView for Output (Response from AI) -->
-        <TextView
-            android:id="@+id/outputText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:textSize="18sp"
-            android:textColor="#000"
-            android:layout_marginTop="20dp"
-            android:background="#f0f0f0" />
-
-        <TextView
-            android:id="@+id/outputText2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Algorithm Output"
-            android:layout_marginTop="16dp"
-            android:textSize="16sp"/>
+                <!-- Pengaruh pada Aktivitas Harian -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa besar perasaan ini mengganggu aktivitas harian Anda?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/keseharianSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
 
 
+                <!-- Pola Berpikir Negatif -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda memiliki pola berpikir negatif tentang diri sendiri?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/polaNegatifSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
 
+                <!-- Ketakutan Berlebihan -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda merasa takut pada situasi tanpa alasan jelas?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/ketakutanSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
+
+                <!-- Kesulitan Berkonsentrasi -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda kesulitan berkonsentrasi atau fokus?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/konsentrasiSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
+
+                <!-- Kelelahan Berlebih -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda merasa kelelahan berlebih?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/kelelahanSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
+
+                <!-- Gangguan Tidur -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda mengalami gangguan tidur?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/tidurSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
+
+                <!-- Penurunan Minat pada Aktivitas -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa besar penurunan minat Anda pada aktivitas yang biasanya disukai?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/minatSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
+
+                <!-- Isolasi Sosial -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Seberapa sering Anda menghindari interaksi sosial?"
+                    android:layout_marginTop="10dp" />
+                <SeekBar
+                    android:id="@+id/isolasiSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="4"
+                    style="@style/CustomSeekBar"/>
+
+
+                <!-- Button Kirim -->
+                <Button
+                    android:id="@+id/sendButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kirim"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/rounded_button"
+                    android:textColor="#fff"
+                    android:textSize="16sp"
+                    android:padding="12dp"
+                    android:layout_marginBottom="16dp"/>
+
+                <!-- Output TextView -->
+                <TextView
+                    android:id="@+id/outputText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:textSize="16sp"
+                    android:textColor="#333333"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/rounded_card" />
+
+                <TextView
+                    android:id="@+id/outputText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Algorithm Output"
+                    android:layout_marginTop="16dp"
+                    android:textSize="16sp"/>
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
-</ScrollView>
+
+    <!-- Bottom Navigation View -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_gravity="bottom"
+        android:background="#FFFFFF"
+        app:menu="@menu/bottom_nav_menu"
+        android:elevation="4dp" />
+
+</FrameLayout>
