--- a/app/src/main/res/drawable/background_layers.xml
+++ b/app/src/main/res/drawable/background_layers.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/Light_blue" />
+            <solid android:color="#fe2f63" />
         </shape>
     </item>
     <item
