--- a/app/src/main/res/layout/activity_bmi.xml
+++ b/app/src/main/res/layout/activity_bmi.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/background_layers">
+    >
 
     <!-- Title -->
     <TextView
@@ -17,12 +17,12 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/formContainer"
         app:layout_constraintVertical_chainStyle="packed"
-        android:gravity="center"
         tools:ignore="HardcodedText" />
 
     <!-- Form Container -->
@@ -52,7 +52,7 @@
             android:hint="Enter your age"
             android:inputType="number"
             android:background="@drawable/bg_edittext"
-            app:layout_constraintTop_toTopOf="@+id/ageLabel"
+            app:layout_constraintTop_toTopOf="@id/ageLabel"
             app:layout_constraintStart_toEndOf="@id/ageLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent="0.7"
@@ -136,6 +136,7 @@
             app:layout_constraintStart_toEndOf="@id/weightLabel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent="0.7" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Calculate Button -->
@@ -151,7 +152,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Results -->
+    <!-- BMI Result -->
     <TextView
         android:id="@+id/bmiResultLabel"
         android:layout_width="wrap_content"
@@ -175,6 +176,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- BMI Class -->
     <TextView
         android:id="@+id/classResultLabel"
         android:layout_width="wrap_content"
