--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,8 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:layout_marginStart="20dp"
-        android:text="Sign Up"
-        android:textSize="25sp"
+        android:text="Daftar"
+        android:textColor="@color/black"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -34,12 +35,12 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="318dp"
-        android:layout_height="295dp"
+        android:layout_width="350dp"
+        android:layout_height="300dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/loginasset"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/icon_lifeai"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,7 @@
         android:hint="Masukkan Username Anda"
         android:inputType="textPersonName"
         android:padding="16dp"
-        android:backgroundTint="@color/black"
+        android:background="@drawable/edittext_border"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/imageView"
@@ -69,9 +70,9 @@
         android:hint="Masukkan Email Anda"
         android:inputType="textEmailAddress"
         android:padding="16dp"
-        android:backgroundTint="@color/black"
         android:textColor="@color/black"
         android:textSize="16sp"
+        android:background="@drawable/edittext_border"
         app:layout_constraintTop_toBottomOf="@id/etUsername"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +87,7 @@
         android:hint="Masukkan Password Anda"
         android:inputType="textPassword"
         android:padding="16dp"
-        android:backgroundTint="@color/black"
+        android:background="@drawable/edittext_border"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/etEmail"
